# rlsp

./: .gitignore  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  LICENSE  README.md  SECURITY.md  cliff.toml  codecov.yml  features.txt  initial_task.txt  potential_features.txt  release-plz.toml  rust-toolchain.toml  rust.md  task_open.txt
.claude/: .gitignore  (+4 more)
rlsp-fmt/: CHANGELOG.md  Cargo.toml  README.md
rlsp-fmt/docs/: feature-log.md
rlsp-fmt/src/: ir.rs  lib.rs  printer.rs
rlsp-yaml/: CHANGELOG.md  Cargo.toml  README.md
rlsp-yaml-parser/: CHANGELOG.md  CLAUDE.md  Cargo.toml  README.md  build.rs  code-improvements.md
rlsp-yaml-parser-temp/: Cargo.toml
rlsp-yaml-parser-temp/benches/: latency.rs  memory.rs  throughput.rs
rlsp-yaml-parser-temp/docs/: benchmarks.md
rlsp-yaml-parser-temp/src/: chars.rs  error.rs  event.rs  lexer.rs  lib.rs  lines.rs  loader.rs
rlsp-yaml-parser-temp/tests/: conformance.rs  encoding.rs  error_reporting.rs  loader.rs  loader_spans.rs  robustness.rs  smoke.rs
rlsp-yaml-parser/benches/: fixtures.rs  latency.rs  memory.rs  throughput.rs
rlsp-yaml-parser/docs/: architecture.md  benchmarks.md  feature-log.md  yaml-spec-conformance.md
rlsp-yaml-parser/docs/conformance/: README.md  bnf-§5.md  bnf-§6.md  bnf-§7.md  bnf-§8.md  bnf-§9.md  design-decisions.md  prose.md
rlsp-yaml-parser/src/: block.rs  chars.rs  combinator.rs  directive_scope.rs  emitter.rs  encoding.rs  error.rs  event.rs  event_iter.rs  flow.rs  lexer.rs  lib.rs  limits.rs  lines.rs  loader.rs  mapping.rs  node.rs  pos.rs  properties.rs  schema.rs  state.rs  stream.rs  structure.rs  token.rs
rlsp-yaml-parser/src/event_iter/: base.rs  block.rs  directive_scope.rs  directives.rs  flow.rs  line_mapping.rs  properties.rs  state.rs  step.rs
rlsp-yaml-parser/src/event_iter/block/: mapping.rs  sequence.rs
rlsp-yaml-parser/src/lexer/: block.rs  comment.rs  plain.rs  quoted.rs
rlsp-yaml-parser/src/loader/: comments.rs  reloc.rs  stream.rs
rlsp-yaml-parser/tests/: conformance.rs  encoding.proptest-regressions  encoding.rs  error_reporting.rs  implicit_key_length.rs  loader.rs  loader_anchor_loc.rs  loader_spans.rs  loader_tag_loc.rs  robustness.rs  round_trip.rs  roundtrip.rs  scalar_limits.rs  schema_resolution.rs  smoke.rs  unicode_positions.rs  yaml-test-suite
rlsp-yaml-parser/tests/conformance/: loader.rs  main.rs  stream.rs
rlsp-yaml-parser/tests/smoke/: anchors_and_aliases.rs  block_scalars.rs  char_validation.rs  comments.rs  conformance.rs  directives.rs  documents.rs  flow_collections.rs  folded_scalars.rs  main.rs  mappings.rs  nested_collections.rs  nested_flow_block_mixing.rs  probe_dispatch.rs  quoted_scalars.rs  scalar_dispatch.rs  scalars.rs  schema_ints.rs  sequences.rs  stream.rs  tags.rs
rlsp-yaml/benches/: hot_path.rs  insight.rs  latency.rs
rlsp-yaml/benches/fixtures/: mod.rs
rlsp-yaml/docs/: configuration.md  feature-log.md  features.md
rlsp-yaml/editors/code/: .gitignore  .vscodeignore  CLAUDE.md  README.md  eslint.config.mjs  package.json
rlsp-yaml/editors/code/src/: client.ts  commands.ts
rlsp-yaml/integrations/claude-code/: .lsp.json  MANUAL_VERIFICATION.md  README.md
rlsp-yaml/integrations/claude-code/.claude-plugin/: plugin.json
rlsp-yaml/integrations/claude-code/hooks/: hooks.json
rlsp-yaml/integrations/vscode/: .vscode-test.mjs  CLAUDE.md  README.md  eslint.config.mjs  package.json  pnpm-lock.yaml  tsconfig.json  vitest.config.ts
rlsp-yaml/integrations/zed/: Cargo.toml  README.md  extension.toml
rlsp-yaml/src/: analysis.rs  code_actions.rs  code_lens.rs  color.rs  completion.rs  decorators.rs  document_links.rs  document_store.rs  editing.rs  folding.rs  formatter.rs  hover.rs  lib.rs  lsp_util.rs  main.rs  navigation.rs  on_type_formatting.rs  parser.rs  references.rs  rename.rs  scalar_helpers.rs  schema.rs  schema_validation.rs  selection.rs  semantic_tokens.rs  server.rs  suppression.rs  symbols.rs  test_utils.rs  validation.rs  validators.rs
rlsp-yaml/src/analysis/: folding.rs  selection.rs  semantic_tokens.rs  symbols.rs
rlsp-yaml/src/completion/: completion_drivers.rs  completion_items.rs  cursor_location.rs  formatting.rs  navigation.rs  schema_completions.rs  support.rs
rlsp-yaml/src/decorators/: code_lens.rs  color.rs  document_links.rs
rlsp-yaml/src/editing/: code_actions.rs  editor_config.rs  formatter.rs  on_type_formatting.rs
rlsp-yaml/src/navigation/: references.rs  rename.rs
rlsp-yaml/src/schema/: association.rs  mod.rs
rlsp-yaml/src/schema_validation/: array_constraints.rs  composition.rs  context.rs  formats.rs  mapping_constraints.rs  mod.rs  scalar_constraints.rs  support.rs  type_validation.rs
rlsp-yaml/src/validation/: settings.rs  suppression.rs  validators.rs
rlsp-yaml/tests/: claude_code_stdio_smoke.rs  code_action_fixtures.rs  code_action_idempotency.rs  code_action_property_preservation.rs  conformance.rs  corpus_invariants.rs  ecosystem_fixtures.rs  editorconfig_integration.rs  formatter_conformance.rs  formatter_fixtures.rs  formatter_idempotency.rs  lsp_lifecycle.rs  parser_boundary_audit.rs  rename_fixtures.rs
rlsp-yaml/tests/common/: mod.rs
rlsp-yaml/tests/corpus/: WORKLIST.md  docker-compose.yml  github-actions-matrix.yml  kubernetes-deployment.yaml  release-plz-workflow.yml
rlsp-yaml/tests/corpus_invariants/: i10_formatter_round_trip.rs  i11_validator_stability.rs  i1_no_panics.rs  i2_range_validity.rs  i3_code_action_round_trip.rs  i4_scalar_preservation.rs  i5_anchor_loc_invariant.rs  i6_tag_loc_invariant.rs  i8_selection_no_panic.rs  i9_complete_at_no_panics.rs  main.rs  shared.rs
rlsp-yaml/tests/fixtures/: CLAUDE.md
rlsp-yaml/tests/lsp_lifecycle/: code_actions.rs  code_lens.rs  completion.rs  configuration.rs  custom_tags.rs  document_links.rs  document_management.rs  folding_ranges.rs  formatting_integration.rs  helpers.rs  hover.rs  kubernetes_detection.rs  lifecycle.rs  main.rs  navigation.rs  on_type_formatting.rs  rename.rs  schema_modelines.rs  selection_ranges.rs  semantic_tokens.rs  validators_integration.rs  watched_files.rs
(+907 files in other folders)
