[package]
name = "rlsp-fmt"
version = "0.1.1"
edition = "2024"
rust-version = "1.87"
description = "A reusable pretty-printing engine for rlsp language servers"
authors.workspace = true
license.workspace = true
repository.workspace = true
homepage = "https://github.com/chdalski/rlsp"
keywords = ["formatter", "pretty-print", "wadler-lindig"]
categories = ["development-tools", "text-editors"]

[lints]
workspace = true
