[package]
name = "rlsp-yaml-parser"
version = "0.0.0"
edition = "2024"
rust-version = "1.87"
license.workspace = true
authors.workspace = true
repository.workspace = true
description = "Spec-faithful streaming YAML 1.2 parser"

[dependencies]
memchr = "2"
thiserror = "2"

[dev-dependencies]
rstest = "0.26"
criterion = { version = "0.8", features = ["html_reports"] }

[[bench]]
name = "throughput"
harness = false

[[bench]]
name = "latency"
harness = false

[[bench]]
name = "memory"
harness = false

[lints]
workspace = true
