[package]
name = "rlsp-yaml"
version = "0.2.0"
edition = "2024"
rust-version = "1.87"
description = "A fast, lightweight YAML language server"
authors.workspace = true
license.workspace = true
repository.workspace = true
homepage = "https://github.com/chdalski/rlsp"
keywords = ["yaml", "lsp", "language-server"]
categories = ["development-tools", "text-editors"]

[lints]
workspace = true

[dependencies]
rlsp-fmt = { version = "0.1.2", path = "../rlsp-fmt" }
tower-lsp = { version = "0.20", features = ["proposed"] }
tokio = { version = "1", features = ["full"] }
serde_json = "1"
serde = { version = "1", features = ["derive"] }
saphyr = "0.0.6"
regex = "1"
once_cell = "1"
ureq = { version = "3", features = ["rustls"] }

[dev-dependencies]
futures = "0.3"
tower = "0.5"
