[package]
name = "rlsp-yaml"
version = "0.8.0"
edition = "2024"
rust-version = "1.87"
description = "A fast, lightweight YAML language server"
authors.workspace = true
license.workspace = true
repository.workspace = true
homepage = "https://github.com/chdalski/rlsp"
keywords = ["yaml", "lsp", "language-server"]
categories = ["development-tools", "text-editors"]

[lints]
workspace = true

[dependencies]
rlsp-fmt = { version = "0.1.7", path = "../rlsp-fmt" }
rlsp-yaml-parser = { version = "0.4", path = "../rlsp-yaml-parser" }
tower-lsp = { version = "0.20", features = ["proposed"] }
tokio = { version = "1", features = ["full"] }
serde_json = "1"
serde = { version = "1", features = ["derive"] }
regex = "1"
once_cell = "1"
ureq = { version = "3", features = ["rustls"] }
idna = "1.0"
iri-string = "0.7"
data-encoding = "2.9"

[dev-dependencies]
criterion = { version = "0.8", features = ["html_reports"] }
futures = "0.3"
rstest = "0.26"
tiny_http = "0.12"
tower = "0.5"

[[bench]]
name = "hot_path"
harness = false

[[bench]]
name = "latency"
harness = false

[[bench]]
name = "insight"
harness = false
